@@ -19,4 +19,4 @@
 sid = S-1-5-21-1911238739-97561441-2706018148
 
 # enable quota support
-enable_quota = no
+enable_quota = yes
